--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 <body>
 
 <div class="content">
-  <h1>CARLS EPIC AND LALA WEBSITE OF EPIK</h1>
+  <h1>WELCOME TO THE DINGUS DUNGEON</h1>
   <h1>my website has <span id="visits"></span> visits!</h1>
   <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
   500px wide, it will span the whole of the page.</p>
