--- a/index.html
+++ b/index.html
@@ -1,38 +1,190 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  background: #134133;
-}
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-.content {
-  max-width: 500px;
-  margin: auto;
-  background: #3bcda1;
-  padding: 10px;
-}
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./website_files/style.css" />
+    <style>
+      body {
+        background: #98ccc4;
+        font-family: "Courier New", monospace;
+      }
 
-</style>
-</head>
-<body>
+      .content {
+        max-width: 600px;
+        margin: auto;
+        background: #fff883;
+        padding: 10px;
+      }
+      td,
+      th {
+        border: 1px solid #000000;
+        text-align: left;
+        padding: 8px;
+        vertical-align: top;
+      }
+      a:link,
+      a:visited {
+        background-color: #ff5900;
+        color: #fff883;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+      }
 
-<div class="content">
-  <h1>WELCOME TO THE DINGUS DUNGEON</h1>
-  <h1>my website has <span id="visits"></span> visits!</h1>
-  <p>This page is always centered on screens that are wider than 500px. On screens that are less than 
-  500px wide, it will span the whole of the page.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-  <p>Content inside this container is centered horizontally.</p>
-</div>
+      a:hover,
+      a:active {
+        background-color: #ffd000;
+      }
+      h5,
+      dt {
+        color: #1bb49d;
+        font-weight: bold;
+      }
+    </style>
+    <style type="text/css" id="operaUserStyle"></style>
+  </head>
+  <body>
+    <div class="content">
+      <h1>WELCOME TO THE DINGUS DUNGEON</h1>
 
-</body>
+      <table style="width: 100%">
+        <tbody>
+          <tr>
+            <th style="width: 20%"></th>
+            <th></th>
+            <th style="width: 20%"></th>
+          </tr>
+          <tr>
+            <td>
+              <p id="demo">My birthday is in 281 days!!</p>
+
+              <script>
+                // Set the date we're counting down to
+                var countDownDate = new Date("Dec 23, 2024").getTime();
+
+                // Update the count down every 1 second
+                var x = setInterval(function () {
+                  // Get today's date and time
+                  var now = new Date().getTime();
+
+                  // Find the distance between now and the count down date
+                  var distance = countDownDate - now;
+
+                  // Time calculations for days, hours, minutes and seconds
+                  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+
+                  // Display the result in the element with id="demo"
+                  document.getElementById("demo").innerHTML =
+                    "My birthday is in " + days + " days!!";
+
+                  // If the count down is finished, write some text
+                  if (distance < 0) {
+                    clearInterval(x);
+                    document.getElementById("demo").innerHTML =
+                      "u missed it :(";
+                  }
+                }, 1000);
+              </script>
+            </td>
+            <td>
+              <b>INFO ABOUT ME!</b>
+              <dt>⋆ He/Him</dt>
+              <dt>⋆ 23/12/08</dt>
+              <dt>⋆ I'm latvian</dt>
+            </td>
+            <td>
+              <a href="https://roopert23.glitch.me/">⋆ROOPERT⋆</a>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <td rowspan="2">
+              <b>STUFF I LIKE</b>
+              <h5>🎮Videogames!</h5>
+              <dt>⋆ Minecraft</dt>
+              <dt>⋆ Roblox</dt>
+              <dt>⋆ DDLC</dt>
+              <dt>⋆ Subway surfers</dt>
+              <h5>🎥Content creators!</h5>
+              <dt><a href="https://www.youtube.com/@Grian">⋆ Grian</a></dt>
+              <dt>
+                <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWS</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@Slimecicle">⋆ Slimecicle</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@Technoblade">⋆ Technoblade</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@EthosLab">⋆ EthosLab</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@JackSucksAtLife">⋆ JSAL</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@Jschlatt">⋆ Jschlatt</a>
+              </dt>
+              <dt><a href="https://www.youtube.com/@tuv">⋆ Tuv</a></dt>
+              <h5>🛹Hobbies!</h5>
+              <dt>⋆ Drawing</dt>
+              <dt>⋆ Skamteboard</dt>
+              <dt>⋆ Videogames</dt>
+              <dt>⋆ doing yr mom</dt>
+              <h5>😼Other stuffs!</h5>
+              <dt>⋆ Hermitcraft</dt>
+              <dt>⋆ The front bottoms</dt>
+              <dt>⋆ Hazbin hotel</dt>
+              <dt>⋆ Garfield</dt>
+              <dt>⋆ doing yr mom</dt>
+            </td>
+            <td>
+              <dt>🕸️SOCIALS!</dt>
+              <dd><a href="https://www.tumblr.com/dingoislame">Tumblr</a></dd>
+              <dd>
+                <a
+                  href="https://www.youtube.com/channel/UCvDfmNBSX2tEjtLHEyJVIPg"
+                  >Youtube</a
+                >
+              </dd>
+              <dd>
+                <a href="https://www.reddit.com/user/StoicWanders/">Reddit</a>
+              </dd>
+              <dd><a href="https://www.pixilart.com/dibger">Pixilart</a></dd>
+              <dt>[DISCORD]</dt>
+              <dd>dibgo</dd>
+              <dt>[Mc JAVA]</dt>
+              <dd>dibgo</dd>
+              <dt>[Mc BE]</dt>
+              <dd>RoshenCrabs</dd>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              penis <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+            </td>
+            <td>bigger penis</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
