☄️⛹ Checkpoint ./index.html:65991231/563

--- a/index.html
+++ b/index.html
@@ -95,11 +95,15 @@
               <dt>⋆ I'm latvian</dt>
             </td>
             <td>
+                  <h5>Pals (●'◡'●)</h5>
               <a href="https://roopert23.glitch.me/">⋆ROOPERT⋆</a>
             </td>
           </tr>
           <tr>
-            <td></td>
+            <td>
+            <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif">
+              
+            </td>
             <td rowspan="2">
               <b>STUFF I LIKE</b>
               <h5>🎮Videogames!</h5>
@@ -127,16 +131,16 @@
               <dt>
                 <a href="https://www.youtube.com/@Jschlatt">⋆ Jschlatt</a>
               </dt>
-              <dt><a href="https://www.youtube.com/@tuv">⋆ Tuv</a></dt>
               <h5>🛹Hobbies!</h5>
               <dt>⋆ Drawing</dt>
               <dt>⋆ Skamteboard</dt>
               <dt>⋆ Videogames</dt>
               <dt>⋆ doing yr mom</dt>
               <h5>😼Other stuffs!</h5>
+              <dt>⋆ Heathers</dt>
+              <dt>⋆ Ride the Cyclone</dt>
               <dt>⋆ Hermitcraft</dt>
               <dt>⋆ The front bottoms</dt>
-              <dt>⋆ Hazbin hotel</dt>
               <dt>⋆ Garfield</dt>
               <dt>⋆ doing yr mom</dt>
             </td>
