--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <body>
     <div class="content">
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
+<img src="https://blinkies.cafe/b/display/0222-construction.gif" style="width:90%;" class="center">
 
       <table style="width: 100%">
         <tbody>
