--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   <body>
     <div class="content">
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
+<img src="https://blinkies.cafe/b/display/0222-construction.gif" style="width:100%;" class="center">
 
-<a href="https://www.tumblr.com/dingoislame">Tumblr</a>
       <table style="width: 100%">
         <tbody>
           <tr>
@@ -102,7 +102,8 @@
           </tr>
           <tr>
             <td>
-            <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif">
+         <a href="Heathers.html"><img src="https://blinkies.cafe/b/display/0118-rubberducky.gif"></a>
+            
               
             </td>
             <td rowspan="2">
