--- a/Heathers.html
+++ b/Heathers.html
@@ -38,12 +38,14 @@
         color: #1bb49d;
         font-weight: bold;
       }
+      h6 {text-align: center;}
+      h1 {text-align: center;}
     </style>
 
     <div class="content">
       <h1>YOU FOUND A SECRET</h1>
-      <p>This page is all about heathers ^_^</p>
-      <a href="index.html">Go back?</a>
+      <h6>This page is all about heathers ^_^</h6>
+      <h6><a href="index.html">Go back?</a></h6>
 
       <table style="width: 100%">
         <tbody>
@@ -68,10 +70,7 @@
           </tr>
           <tr>
             <td>
-              <a href="Heathers.html"
-                ><img
-                  src="https://blinkies.cafe/b/display/0118-rubberducky.gif"
-              /></a>
+              <b>A ranking of my favourite characters :-)</b>
             </td>
             <td rowspan="3">lalala</td>
         
@@ -83,7 +82,14 @@
             </td>
           </tr>
           <tr>
-            <td>penis <br /></td>
+            <td rowspan="2"><b>A ranking of my favourite characters :-)</b> <br />
+                <dt>⋆McNamara</dt>
+                <dt>⋆Veronica</dt>
+                <dt>⋆Chandler</dt>
+                <dt>⋆JD</dt>
+                <dt>⋆Duke</dt>
+                <dt>⋆Martha</dt>
+            </td>
             <td>
               <img
                 src="https://media1.tenor.com/m/tLkJFgjbqZgAAAAd/veronica-heathers-the-musical.gif"
@@ -92,7 +98,7 @@
             </td>
           </tr>
           <tr>
-            <td>penis2 <br /></td>
+          
             <td>              
               <img
                 src="https://media1.tenor.com/m/XNdQ5gz6FJgAAAAd/heathers-musical-heather-chandler.gif"
