--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         color: #1bb49d;
         font-weight: bold;
       }
+          h1 {text-align: center;}
     </style>
     <style type="text/css" id="operaUserStyle"></style>
   </head>
