--- a/Heathers.html
+++ b/Heathers.html
@@ -38,8 +38,12 @@
         color: #1bb49d;
         font-weight: bold;
       }
-      h6 {text-align: center;}
-      h1 {text-align: center;}
+      h6 {
+        text-align: center;
+      }
+      h1 {
+        text-align: center;
+      }
     </style>
 
     <div class="content">
@@ -55,8 +59,15 @@
             <th style="width: 20%"></th>
           </tr>
           <tr>
-            <td>
-              <p id="demo">MEOW</p>
+            <td rowspan="2">
+              <b>QUOTES╰(*°▽°*)╯</b>
+                          <b>A ranking of my favourite characters :-)</b> <br />
+              <dt>⋆McNamara</dt>
+              <dt>⋆Veronica</dt>
+              <dt>⋆Chandler</dt>
+              <dt>⋆JD</dt>
+              <dt>⋆Duke</dt>
+              <dt>⋆Martha</dt>
             </td>
             <td>
               <b>My favourite character is Heather McNamara!!</b>
@@ -69,11 +80,8 @@
             </td>
           </tr>
           <tr>
-            <td>
-              <b>A ranking of my favourite characters :-)</b>
-            </td>
-            <td rowspan="3">lalala</td>
-        
+            <td rowspan="4">lalala</td>
+
             <td>
               <img
                 src="https://media1.tenor.com/m/GHHbkrALnnoAAAAC/mc-namara-veronica-sawyer.gif"
@@ -82,13 +90,14 @@
             </td>
           </tr>
           <tr>
-            <td rowspan="2"><b>A ranking of my favourite characters :-)</b> <br />
-                <dt>⋆McNamara</dt>
-                <dt>⋆Veronica</dt>
-                <dt>⋆Chandler</dt>
-                <dt>⋆JD</dt>
-                <dt>⋆Duke</dt>
-                <dt>⋆Martha</dt>
+            <td rowspan="3">
+  
+              <h7
+                >"If I took a meat cleaver down the center of your skull, I'd
+                have matching halves. That's very important."</h7
+              >
+              <h8>"Grow up, Heather, bulimia is so '87."</h8>
+              <h9>"Did you have a brain tumor for breakfast?"</h9>
             </td>
             <td>
               <img
@@ -98,12 +107,20 @@
             </td>
           </tr>
           <tr>
-          
-            <td>              
+            <td>
               <img
                 src="https://media1.tenor.com/m/XNdQ5gz6FJgAAAAd/heathers-musical-heather-chandler.gif"
                 style="width: 100%"
-              /></td>
+              />
+            </td>
+          </tr>
+                    <tr>
+            <td>
+              <img
+                src="https://media1.tenor.com/m/XNdQ5gz6FJgAAAAd/heathers-musical-heather-chandler.gif"
+                style="width: 100%"
+              />
+            </td>
           </tr>
         </tbody>
       </table>
