--- a/Heathers.html
+++ b/Heathers.html
@@ -44,6 +44,25 @@
       h1 {
         text-align: center;
       }
+      h7 {
+        color: #b58f12;
+      }
+      h8 {
+        color: #e6462e;
+      }
+      h9 {
+        color: #4aa31a;
+      }
+      h10 {
+        color: #1883db;
+      }
+ table, th, td {
+  border: 4px solid #fff883;
+  border-collapse: collapse;
+}
+th, td {
+  background-color: #ffd000;
+}
     </style>
 
     <div class="content">
@@ -60,8 +79,7 @@
           </tr>
           <tr>
             <td rowspan="2">
-              <b>QUOTES╰(*°▽°*)╯</b>
-                          <b>A ranking of my favourite characters :-)</b> <br />
+              <b>A ranking of my favourite characters :-)</b> <br />
               <dt>⋆McNamara</dt>
               <dt>⋆Veronica</dt>
               <dt>⋆Chandler</dt>
@@ -80,7 +98,17 @@
             </td>
           </tr>
           <tr>
-            <td rowspan="4">lalala</td>
+            <td rowspan="4">
+              Heathers: The Musical is the "darkly delicious story of
+              Veronica Sawyer, a brainy, beautiful teenage misfit who hustles
+              her way into the most powerful and ruthless clique at Westerburg
+              High: the Heathers. But before she can get comfortable atop the
+              high school food chain, Veronica falls in love with the
+              dangerously sexy new kid J.D. When Heather Chandler, the Almighty,
+              kicks her out of the group, Veronica decides to bite the bullet
+              and kiss Heather’s aerobicized ass…but J.D. has another plan for
+              that bullet."
+            </td>
 
             <td>
               <img
@@ -91,13 +119,18 @@
           </tr>
           <tr>
             <td rowspan="3">
-  
+              <b>QUOTES╰(*°▽°*)╯</b>
               <h7
                 >"If I took a meat cleaver down the center of your skull, I'd
                 have matching halves. That's very important."</h7
               >
-              <h8>"Grow up, Heather, bulimia is so '87."</h8>
+              <br />
+              <h8>"Grow up, Heather, bulimia is so '87."</h8> <br />
               <h9>"Did you have a brain tumor for breakfast?"</h9>
+              <h10
+                >"Dear diary, my teenage angst bullshit now has a body
+                count."</h10
+              >
             </td>
             <td>
               <img
@@ -114,10 +147,10 @@
               />
             </td>
           </tr>
-                    <tr>
+          <tr>
             <td>
               <img
-                src="https://media1.tenor.com/m/XNdQ5gz6FJgAAAAd/heathers-musical-heather-chandler.gif"
+                src="https://media1.tenor.com/m/OHOjV0ZYjkoAAAAd/heather-mcnamara-ms-fleming.gif"
                 style="width: 100%"
               />
             </td>
