--- a/Heathers.html
+++ b/Heathers.html
@@ -66,7 +66,7 @@ th, td {
     </style>
 
     <div class="content">
-      <h1>YOU FOUND A SECRET</h1>
+      <h1>🤫YOU FOUND A SECRET🤫</h1>
       <h6>This page is all about heathers ^_^</h6>
       <h6><a href="index.html">Go back?</a></h6>
 
