✂️🌞 Checkpoint ./index.html:65991231/15159

--- a/index.html
+++ b/index.html
@@ -42,14 +42,20 @@
         color: #1bb49d;
         font-weight: bold;
       }
-          h1 {text-align: center;}
+      h1 {
+        text-align: center;
+      }
     </style>
     <style type="text/css" id="operaUserStyle"></style>
   </head>
   <body>
     <div class="content">
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
-<img src="https://blinkies.cafe/b/display/0222-construction.gif" style="width:100%;" class="center">
+      <img
+        src="https://blinkies.cafe/b/display/0222-construction.gif"
+        style="width: 100%"
+        class="center"
+      />
 
       <table style="width: 100%">
         <tbody>
@@ -97,17 +103,19 @@
               <dt>⋆ I'm latvian</dt>
             </td>
             <td>
-                  <h5>Pals (●'◡'●)</h5>
+              <h5>Pals (●'◡'●)</h5>
               <a href="https://roopert23.glitch.me/">⋆ROOPERT⋆</a>
             </td>
           </tr>
           <tr>
             <td>
-         <a href="Heathers.html"><img src="https://blinkies.cafe/b/display/0118-rubberducky.gif"></a>
-            
-              
+              <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" />
+              <a href="Heathers.html"
+                ><img
+                  src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif"
+              /></a>
             </td>
-            <td rowspan="2">
+            <td rowspan="3">
               <b>STUFF I LIKE</b>
               <h5>🎮Videogames!</h5>
               <dt>⋆ Minecraft</dt>
@@ -169,26 +177,22 @@
             </td>
           </tr>
           <tr>
-            <td>
+            <td rowspan="2">
               penis <br />
               <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
-              <br />
             </td>
-            <td>bigger penis</td>
+            <td>
+              <img
+                src="https://i6.glitter-graphics.org/pub/1779/1779876lcy7hinnpa.gif"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img
+                src="https://i6.glitter-graphics.org/pub/1779/1779876lcy7hinnpa.gif"
+              />
+            </td>
           </tr>
         </tbody>
       </table>
