🧀📮 Checkpoint ./index.html:65991231/498

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
           </tr>
           <tr>
             <td>
-              <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" />
-              <a href="Heathers.html"
-                ><img
-                  src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif"
-              /></a>
+              <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" /> <br>
+              <img src="https://i7.glitter-graphics.org/pub/2605/2605607xhf5nmyhpc.gif"/> <br>
+              <a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif"/> <br>
+                
+              </a>
             </td>
             <td rowspan="3">
               <b>STUFF I LIKE</b>
@@ -185,6 +185,7 @@
               <img
                 src="https://i6.glitter-graphics.org/pub/1779/1779876lcy7hinnpa.gif"
               />
+              
             </td>
           </tr>
           <tr>
