--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <table style="width: 100%">
         <tbody>
           <tr>
-            <th style="width: 20%"></th>
-            <th></th>
-            <th style="width: 20%"></th>
+            <th style="width: 20%"><img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" /></th>
+            <th><img src="https://i7.glitter-graphics.org/pub/1183/1183567lz9y15lmej.gif" style=""></th>
+            <th style="width: 20%"><a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif"/></th>
           </tr>
           <tr>
             <td>
@@ -109,10 +109,6 @@
           </tr>
           <tr>
             <td>
-              <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" /> <br>
-              <img src="https://i7.glitter-graphics.org/pub/2605/2605607xhf5nmyhpc.gif"/> <br>
-              <a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif"/> <br>
-                
               </a>
             </td>
             <td rowspan="3">
