--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       h1 {
         text-align: center;
       }
+       table, th, td {
+  border: 4px solid #fff883;
+  border-collapse: collapse;
+}
+th, td {
+  background-color: #ffd000;
+}
     </style>
     <style type="text/css" id="operaUserStyle"></style>
   </head>
@@ -173,15 +180,13 @@
             </td>
           </tr>
           <tr>
-            <td rowspan="2">
-              penis <br />
-              <br />
+            <td rowspan="1">
+              penis 
             </td>
             <td>
               <img
                 src="https://i6.glitter-graphics.org/pub/1779/1779876lcy7hinnpa.gif"
               />
-              
             </td>
           </tr>
           <tr>
