--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
       h1 {
         text-align: center;
       }
-       table, th, td {
-  border: 4px solid #fff883;
-  border-collapse: collapse;
-}
-th, td {
-  background-color: #ffd000;
-}
+      table,
+      th,
+      td {
+        border: 4px solid #fff883;
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        background-color: #ffd000;
+      }
     </style>
     <style type="text/css" id="operaUserStyle"></style>
   </head>
@@ -67,9 +70,19 @@ th, td {
       <table style="width: 100%">
         <tbody>
           <tr>
-            <th style="width: 20%"><img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" /></th>
-            <th><img src="https://i7.glitter-graphics.org/pub/1183/1183567lz9y15lmej.gif" style=""></th>
-            <th style="width: 20%"><a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif"/></th>
+            <th style="width: 20%">
+              <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" />
+            </th>
+            <th>
+              <img
+                src="https://i7.glitter-graphics.org/pub/1183/1183567lz9y15lmej.gif"
+                style=""
+              />
+            </th>
+            <th style="width: 20%">
+              <a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif" /> </a
+              >
+            </th>
           </tr>
           <tr>
             <td>
@@ -115,9 +128,7 @@ th, td {
             </td>
           </tr>
           <tr>
-            <td>
-              </a>
-            </td>
+            <td></td>
             <td rowspan="3">
               <b>STUFF I LIKE</b>
               <h5>🎮Videogames!</h5>
@@ -180,21 +191,13 @@ th, td {
             </td>
           </tr>
           <tr>
-            <td rowspan="1">
-              penis 
-            </td>
             <td>
               <img
                 src="https://i6.glitter-graphics.org/pub/1779/1779876lcy7hinnpa.gif"
               />
             </td>
-          </tr>
-          <tr>
-            <td>
-              <img
-                src="https://i6.glitter-graphics.org/pub/1779/1779876lcy7hinnpa.gif"
-              />
-            </td>
+
+            <td></td>
           </tr>
         </tbody>
       </table>
