📰🎽 Checkpoint ./Heathers.html:65991231/10233 ./index.html:65991231/1767 ./style.css:65991231/1291

--- a/Heathers.html
+++ b/Heathers.html
@@ -56,13 +56,16 @@
       h10 {
         color: #1883db;
       }
- table, th, td {
-  border: 4px solid #fff883;
-  border-collapse: collapse;
-}
-th, td {
-  background-color: #ffd000;
-}
+      table,
+      th,
+      td {
+        border: 4px solid #fff883;
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        background-color: #ffd000;
+      }
     </style>
 
     <div class="content">
@@ -80,15 +83,15 @@ th, td {
           <tr>
             <td rowspan="2">
               <b>A ranking of my favourite characters :-)</b> <br />
-              <dt>⋆McNamara</dt>
-              <dt>⋆Veronica</dt>
-              <dt>⋆Chandler</dt>
-              <dt>⋆JD</dt>
-              <dt>⋆Duke</dt>
-              <dt>⋆Martha</dt>
+              <dt>1. McNamara</dt>
+              <dt>2. Veronica</dt>
+              <dt>3. Chandler</dt>
+              <dt>4. JD</dt>
+              <dt>5. Duke</dt>
+              <dt>6. Martha</dt>
             </td>
             <td>
-              <b>My favourite character is Heather McNamara!!</b>
+              <b>My favourite character is <h7>Heather McNamara!!</h7></b>
             </td>
             <td>
               <img
@@ -99,15 +102,13 @@ th, td {
           </tr>
           <tr>
             <td rowspan="4">
-              Heathers: The Musical is the "darkly delicious story of
-              Veronica Sawyer, a brainy, beautiful teenage misfit who hustles
-              her way into the most powerful and ruthless clique at Westerburg
-              High: the Heathers. But before she can get comfortable atop the
-              high school food chain, Veronica falls in love with the
-              dangerously sexy new kid J.D. When Heather Chandler, the Almighty,
-              kicks her out of the group, Veronica decides to bite the bullet
-              and kiss Heather’s aerobicized ass…but J.D. has another plan for
-              that bullet."
+              Heathers: The Musical is like Mean Girls on STEROIDS, but with
+              more croquet and fewer carbs. Picture a high school where the
+              popular girls are named Heather, Heather, and... Heather. Add in a
+              rebellious girl named Veronica, a dark and mysterious newcomer
+              named J.D., and a whole lot of shoulder pads. Mix in some catchy
+              '80s-inspired tunes, a dash of murder, and a sprinkle of teenage
+              angst. Voilà! You've got a musical that's so very, very... very!
             </td>
 
             <td>
