--- a/index.html
+++ b/index.html
@@ -4,62 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./website_files/style.css" />
-    <style>
-      body {
-        background: #98ccc4;
-        font-family: "Courier New", monospace;
-      }
+    <link rel="stylesheet" href="style.css" />
 
-      .content {
-        max-width: 600px;
-        margin: auto;
-        background: #fff883;
-        padding: 10px;
-      }
-      td,
-      th {
-        border: 1px solid #000000;
-        text-align: left;
-        padding: 8px;
-        vertical-align: top;
-      }
-      a:link,
-      a:visited {
-        background-color: #ff5900;
-        color: #fff883;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-      }
-
-      a:hover,
-      a:active {
-        background-color: #ffd000;
-      }
-      h5,
-      dt {
-        color: #1bb49d;
-        font-weight: bold;
-      }
-      h1 {
-        text-align: center;
-      }
-      table,
-      th,
-      td {
-        border: 4px solid #fff883;
-        border-collapse: collapse;
-      }
-      th,
-      td {
-        background-color: #ffd000;
-      }
-    </style>
     <style type="text/css" id="operaUserStyle"></style>
   </head>
   <body>
     <div class="content">
+      <img src="https://i9.glitter-graphics.org/pub/137/137539c4z4dvruwy.gif"><img src="https://i9.glitter-graphics.org/pub/137/137539c4z4dvruwy.gif"><img src="https://i9.glitter-graphics.org/pub/137/137539c4z4dvruwy.gif">
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
       <img
         src="https://blinkies.cafe/b/display/0222-construction.gif"
@@ -137,24 +88,21 @@
               <dt>⋆ DDLC</dt>
               <dt>⋆ Subway surfers</dt>
               <h5>🎥Content creators!</h5>
-              <dt><a href="https://www.youtube.com/@Grian">⋆ Grian</a></dt>
+              <dt><a href="https://www.youtube.com/@Grian">⋆ Grianㅤ</a></dt>
               <dt>
-                <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWS</a>
+                <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWSㅤ</a>
               </dt>
               <dt>
-                <a href="https://www.youtube.com/@Slimecicle">⋆ Slimecicle</a>
+                <a href="https://www.youtube.com/@Slimecicle">⋆ Slimecicleㅤ</a>
               </dt>
               <dt>
-                <a href="https://www.youtube.com/@Technoblade">⋆ Technoblade</a>
+                <a href="https://www.youtube.com/@Technoblade">⋆ Technobladeㅤ</a>
               </dt>
               <dt>
-                <a href="https://www.youtube.com/@EthosLab">⋆ EthosLab</a>
+                <a href="https://www.youtube.com/@JackSucksAtLife">⋆ JSALㅤ</a>
               </dt>
               <dt>
-                <a href="https://www.youtube.com/@JackSucksAtLife">⋆ JSAL</a>
-              </dt>
-              <dt>
-                <a href="https://www.youtube.com/@Jschlatt">⋆ Jschlatt</a>
+                <a href="https://www.youtube.com/@Jschlatt">⋆ Jschlattㅤ</a>
               </dt>
               <h5>🛹Hobbies!</h5>
               <dt>⋆ Drawing</dt>
