🎡☎️ Checkpoint ./Heathers.html:65991231/10233 ./index.html:65991231/106 ./style.css:65991231/94

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td>
-              <p id="demo">My birthday is in 281 days!!</p>
+              <b id="demo">My birthday is in 281 days!!</b>
 
               <script>
                 // Set the date we're counting down to
