--- a/Heathers.html
+++ b/Heathers.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
     <style>
       body {
@@ -44,17 +47,25 @@
       h1 {
         text-align: center;
       }
+      //mac
       h7 {
         color: #b58f12;
       }
+      //chan
       h8 {
         color: #e6462e;
       }
+      //duke
       h9 {
         color: #4aa31a;
       }
+      //veronica
       h10 {
         color: #1883db;
+      }
+      //jd
+      h4 {
+        color: #000000;
       }
       table,
       th,
@@ -102,13 +113,13 @@
           </tr>
           <tr>
             <td rowspan="4">
-              Heathers: The Musical is like Mean Girls on STEROIDS, but with
-              more croquet and fewer carbs. Picture a high school where the
-              popular girls are named Heather, Heather, and... Heather. Add in a
-              rebellious girl named Veronica, a dark and mysterious newcomer
-              named J.D., and a whole lot of shoulder pads. Mix in some catchy
-              '80s-inspired tunes, a dash of murder, and a sprinkle of teenage
-              angst. Voilà! You've got a musical that's so very, very... very!
+              <b>Welcome to Westerberg High, where popularity is a matter of life
+              and death, and <h10>Veronica Sawyer</h10> is just another nobody dreaming of
+              a better day. But when she's unexpectedly taken under the wings of
+              the three beautiful and impossibly cruel <h8>Heathers</h8>, her dreams of
+              popularity finally start to come true. That is until <h4>JD</h4> turns up,
+              the mysterious teen rebel who teaches her that it might kill to be
+              a nobody, but it is murder being a somebody… </b>
             </td>
 
             <td>
