--- a/Heathers.html
+++ b/Heathers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="style.css" />
+  <head>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <style>
@@ -64,13 +64,19 @@
       <h1>🤫YOU FOUND A SECRET🤫</h1>
       <h6>This page is all about heathers ^_^</h6>
       <h6><a href="index.html">Go back?</a></h6>
+              <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/MAC?v=1721064930217" style="width: 33%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/CHAN?v=1721064931984" style="width: 33%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/DUKE?v=1721064935310" style="width: 33%"/>
 
       <table style="width: 100%">
         <tbody>
           <tr>
-            <th style="width: 20%"></th>
-            <th></th>
-            <th style="width: 20%"></th>
+            <th style="width: 20%">
+
+            </th>
+            <th>      
+            </th>
+            <th style="width: 20%">
+
+            </th>
           </tr>
           <tr>
             <td rowspan="2">
@@ -94,13 +100,16 @@
           </tr>
           <tr>
             <td rowspan="4">
-              <b>Welcome to Westerberg High, where popularity is a matter of life
-              and death, and <h10>Veronica Sawyer</h10> is just another nobody dreaming of
-              a better day. But when she's unexpectedly taken under the wings of
-              the three beautiful and impossibly cruel <h8>Heathers</h8>, her dreams of
-              popularity finally start to come true. That is until <h11>JD</h11> turns up,
-              the mysterious teen rebel who teaches her that it might kill to be
-              a nobody, but it is murder being a somebody… </b>
+              <b
+                >Welcome to Westerberg High, where popularity is a matter of
+                life and death, and <h10>Veronica Sawyer</h10> is just another
+                nobody dreaming of a better day. But when she's unexpectedly
+                taken under the wings of the three beautiful and impossibly
+                cruel <h8>Heathers</h8>, her dreams of popularity finally start
+                to come true. That is until <h11>JD</h11> turns up, the
+                mysterious teen rebel who teaches her that it might kill to be a
+                nobody, but it is murder being a somebody…
+              </b>
             </td>
 
             <td>
