--- a/Heathers.html
+++ b/Heathers.html
@@ -64,7 +64,7 @@
       <h1>🤫YOU FOUND A SECRET🤫</h1>
       <h6>This page is all about heathers ^_^</h6>
       <h6><a href="index.html">Go back?</a></h6>
-              <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/MAC?v=1721064930217" style="width: 33%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/CHAN?v=1721064931984" style="width: 33%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/DUKE?v=1721064935310" style="width: 33%"/>
+              <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/MAC?v=1721064930217" style="width: 33.3%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/CHAN?v=1721064931984" style="width: 33.3%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/DUKE?v=1721064935310" style="width: 33.3%"/>
 
       <table style="width: 100%">
         <tbody>
@@ -99,7 +99,7 @@
             </td>
           </tr>
           <tr>
-            <td rowspan="4">
+            <td rowspan="3">
               <b
                 >Welcome to Westerberg High, where popularity is a matter of
                 life and death, and <h10>Veronica Sawyer</h10> is just another
@@ -107,11 +107,9 @@
                 taken under the wings of the three beautiful and impossibly
                 cruel <h8>Heathers</h8>, her dreams of popularity finally start
                 to come true. That is until <h11>JD</h11> turns up, the
-                mysterious teen rebel who teaches her that it might kill to be a
-                nobody, but it is murder being a somebody…
+                mysterious teen rebel who teaches her that murder good…
               </b>
             </td>
-
             <td>
               <img
                 src="https://media1.tenor.com/m/GHHbkrALnnoAAAAC/mc-namara-veronica-sawyer.gif"
@@ -120,7 +118,7 @@
             </td>
           </tr>
           <tr>
-            <td rowspan="3">
+            <td rowspan="4">
               <b>QUOTES╰(*°▽°*)╯</b>
               <h7
                 >"If I took a meat cleaver down the center of your skull, I'd
@@ -134,12 +132,14 @@
                 count."</h10
               >
             </td>
+          
             <td>
               <img
                 src="https://media1.tenor.com/m/tLkJFgjbqZgAAAAd/veronica-heathers-the-musical.gif"
                 style="width: 100%"
               />
             </td>
+            
           </tr>
           <tr>
             <td>
@@ -150,6 +150,7 @@
             </td>
           </tr>
           <tr>
+            <td>ghi</td>
             <td>
               <img
                 src="https://media1.tenor.com/m/OHOjV0ZYjkoAAAAd/heather-mcnamara-ms-fleming.gif"
