🍪🍋 Checkpoint ./Heathers.html:65991231/54

--- a/Heathers.html
+++ b/Heathers.html
@@ -150,7 +150,7 @@
             </td>
           </tr>
           <tr>
-            <td>ghi</td>
+            <td>mimimim lalalla *sings very good for u* lal al ala </td>
             <td>
               <img
                 src="https://media1.tenor.com/m/OHOjV0ZYjkoAAAAd/heather-mcnamara-ms-fleming.gif"
