🏥🎺 Checkpoint ./Heathers.html:65991231/166 ./.glitch-assets:65991231/1013

--- a/Heathers.html
+++ b/Heathers.html
@@ -61,6 +61,7 @@
     </style>
 
     <div class="content">
+      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/c54072f3-dca5-4b00-9ddb-b8baf71f8072.image.png?v=1721069479912" style="width: 100%">
       <h1>🤫YOU FOUND A SECRET🤫</h1>
       <h6>This page is all about heathers ^_^</h6>
       <h6><a href="index.html">Go back?</a></h6>
