🏇🏚 Checkpoint ./Heathers.html:65991231/306 ./.glitch-assets:65991231/881

--- a/Heathers.html
+++ b/Heathers.html
@@ -6,7 +6,7 @@
   <body>
     <style>
       body {
-        background: #98ccc4;
+        background-image: url(https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/rottweilers?v=1721070579574);
         font-family: "Courier New", monospace;
       }
 
