🏢🙍 Checkpoint ./Heathers.html:65991231/3332 ./HeathersStyle.css:65991231/3240

--- a/Heathers.html
+++ b/Heathers.html
@@ -1,64 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="HeathersStyle.css" />
   </head>
   <body>
-    <style>
-      body {
-        background-image: url(https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/rottweilers?v=1721070579574);
-        font-family: "Courier New", monospace;
-      }
 
-      .content {
-        max-width: 600px;
-        margin: auto;
-        background: #fff883;
-        padding: 10px;
-      }
-      td,
-      th {
-        border: 1px solid #000000;
-        text-align: left;
-        padding: 8px;
-        vertical-align: top;
-      }
-      a:link,
-      a:visited {
-        background-color: #ff5900;
-        color: #fff883;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-      }
-
-      a:hover,
-      a:active {
-        background-color: #ffd000;
-      }
-      h5,
-      dt {
-        color: #1bb49d;
-        font-weight: bold;
-      }
-      h6 {
-        text-align: center;
-      }
-      h1 {
-        text-align: center;
-      }
-
-      table,
-      th,
-      td {
-        border: 4px solid #fff883;
-        border-collapse: collapse;
-      }
-      th,
-      td {
-        background-color: #ffd000;
-      }
-    </style>
 
     <div class="content">
       <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/c54072f3-dca5-4b00-9ddb-b8baf71f8072.image.png?v=1721069479912" style="width: 100%">
