🍎❤️ Checkpoint ./HeathersStyle.css:65991231/84 ./Heathers.html:65991231/470

--- a/Heathers.html
+++ b/Heathers.html
@@ -97,7 +97,7 @@
             </td>
           </tr>
           <tr>
-            <td>mimimim lalalla *sings very good for u* lal al ala </td>
+            <td><img src="https://media1.tenor.com/m/I3qhy9zPMgwAAAAC/heathers-heatherchandler.gif" style="width:100%"></td>
             <td>
               <img
                 src="https://media1.tenor.com/m/OHOjV0ZYjkoAAAAd/heather-mcnamara-ms-fleming.gif"
