⛸👞 Checkpoint ./.glitch-assets:65991231/394 ./Heathers.html:65991231/1455 ./HeathersStyle.css:65991231/219

--- a/Heathers.html
+++ b/Heathers.html
@@ -37,6 +37,17 @@
             </td>
             <td>
               <b>My favourite character is <h7>Heather McNamara!!</h7></b>
+              <audio controls autoplay>
+                <div> 
+  <button onclick="document.getElementById('player').play()">Play</button> 
+  <button onclick="document.getElementById('player').pause()">Pause</button> 
+  <button onclick="document.getElementById('player').volume += 0.1">Vol +</button> 
+  <button onclick="document.getElementById('player').volume -= 0.1">Vol -</button> 
+</div>
+  <source src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/6%20Dead%20Girl%20Walking.mp3?v=1721111061361" type="audio/ogg">
+  <source src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/6%20Dead%20Girl%20Walking.mp3?v=1721111061361" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
             </td>
             <td>
               <img
