--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
               <dt>6. Martha</dt>
             </td>
             <td>
-              <b>My favourite character is <h7>Heather McNamara!!</h7></b>
+              <b>INFO ABOUT ME!</b>
+              <dt>⋆ My names Dingo or McNamara :-)</dt>
+              <dt>⋆ He/Him</dt>
+              <dt>⋆ 23/12/08</dt>
+              <dt>⋆ I'm latvian</dt>
             </td>
             <td>
               <img
@@ -49,15 +53,29 @@
           </tr>
           <tr>
             <td rowspan="3">
-              <b
-                >Welcome to Westerberg High, where popularity is a matter of
-                life and death, and <h10>Veronica Sawyer</h10> is just another
-                nobody dreaming of a better day. But when she's unexpectedly
-                taken under the wings of the three beautiful and impossibly
-                cruel <h8>Heathers</h8>, her dreams of popularity finally start
-                to come true. That is until <h11>JD</h11> turns up, the
-                mysterious teen rebel who teaches her that murder good…
-              </b>
+              <b>STUFF I LIKE</b>
+              <h5>🎮Videogames!</h5>
+              <dt>⋆ Minecraft</dt>
+              <dt>⋆ Roblox</dt>
+              <dt>⋆ DDLC</dt>
+              <dt>⋆ Subway surfers</dt>
+                <h5>🎥Content creators!</h5>
+              <dt><a href="https://www.youtube.com/@Grian">⋆ Grianㅤ</a></dt>
+              <dt>
+                <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWSㅤ</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@Slimecicle">⋆ Slimecicleㅤ</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@Technoblade">⋆ Technobladeㅤ</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@JackSucksAtLife">⋆ JSALㅤ</a>
+              </dt>
+              <dt>
+                <a href="https://www.youtube.com/@Jschlatt">⋆ Jschlattㅤ</a>
+              </dt>
             </td>
             <td>
               <img
@@ -99,7 +117,8 @@
             </td>
           </tr>
           <tr>
-            <td><img src="https://media1.tenor.com/m/I3qhy9zPMgwAAAAC/heathers-heatherchandler.gif" style="width:100%"></td>
+            <td>
+
             <td>
               <img
                 src="https://media1.tenor.com/m/OHOjV0ZYjkoAAAAd/heather-mcnamara-ms-fleming.gif"
