👦🎗 Checkpoint ./index.html:65991231/1716 ./Heathers.html:65991231/279 ./MainPageStyle.css:65991231/126

--- a/Heathers.html
+++ b/Heathers.html
@@ -53,7 +53,7 @@ Your browser does not support the audio element.
             </td>
             <td>
               <img
-                src="https://cdn.discordapp.com/attachments/1253484994698154014/1259882087268225054/5992CF90-5878-402D-BBA6-6A8EE81695B5.gif?ex=6695dde1&is=66948c61&hm=d85569e31572416f73f2d6a41136906e3c4cc9373611605b518e23e354f77126&"
+                src="https://media1.tenor.com/m/lJW_hu0VgzYAAAAC/pelotazo.gif&"
                 style="width: 100%"
               />
             </td>
