--- a/index.html
+++ b/index.html
@@ -29,13 +29,8 @@
           </tr>
           <tr>
             <td rowspan="2">
-              <b>A ranking of my favourite characters :-)</b> <br />
-              <dt>1. McNamara</dt>
-              <dt>2. Veronica</dt>
-              <dt>3. Chandler</dt>
-              <dt>4. JD</dt>
-              <dt>5. Duke</dt>
-              <dt>6. Martha</dt>
+              <b>Pals ╰(*°▽°*)╯</b> <br />
+              <a href="https://roopert23.glitch.me/">ㅤRupertㅤ</a>
             </td>
             <td>
               <b>INFO ABOUT ME!</b>
@@ -65,17 +60,23 @@
                 <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWSㅤ</a>
               </dt>
               <dt>
-                <a href="https://www.youtube.com/@Slimecicle">⋆ Slimecicleㅤ</a>
-              </dt>
-              <dt>
-                <a href="https://www.youtube.com/@Technoblade">⋆ Technobladeㅤ</a>
-              </dt>
-              <dt>
-                <a href="https://www.youtube.com/@JackSucksAtLife">⋆ JSALㅤ</a>
-              </dt>
-              <dt>
                 <a href="https://www.youtube.com/@Jschlatt">⋆ Jschlattㅤ</a>
               </dt>
+                 <dt>
+                <a href="https://www.youtube.com/@SinjinDrowning">⋆ Sinjin Drowningㅤ</a>
+              </dt>
+              <h5>🛹Hobbies!</h5>
+              <dt>⋆ Drawing</dt>
+              <dt>⋆ Skamteboard</dt>
+              <dt>⋆ Videogames</dt>
+              <dt>⋆ doing yr mom</dt>
+              <h5>😼Other stuffs!</h5>
+              <dt>⋆ Heathers</dt>
+              <dt>⋆ Ride the Cyclone</dt>
+              <dt>⋆ Hermitcraft</dt>
+              <dt>⋆ The front bottoms</dt>
+              <dt>⋆ Garfield</dt>
+              <dt>⋆ doing yr mom</dt>
             </td>
             <td>
               <img
