--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
               <dt>⋆ doing yr mom</dt></td>
             <td>
               <img
-                src="https://media1.tenor.com/m/GHHbkrALnnoAAAAC/mc-namara-veronica-sawyer.gif"
+                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-07-23_014855633.png?v=1721688537966"
                 style="width: 100%"
+
               />
+              <b>My dog Buddy</b>
             </td>
           </tr>
           <tr>
@@ -107,9 +109,10 @@
               
 
               <img
-                src="https://media1.tenor.com/m/tLkJFgjbqZgAAAAd/veronica-heathers-the-musical.gif"
+                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-07-23_014520045.png?v=1721688323633"
                 style="width: 100%"
               />
+              <b>My dog Freddy</b>
             </td>
           </tr>
           <tr>
