🐄🌄 Checkpoint ./.glitch-assets:65991231/915 ./index.html:65991231/1697 ./MainPageStyle.css:65991231/143

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       />
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
       <h6>This is a page about me !!</h6>
-      <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" style="width: 31.5%"/><img src="https://i7.glitter-graphics.org/pub/1183/1183567lz9y15lmej.gif" style="width: 31.5%"/><a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif" style="width: 115%"/></a>
+      <img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" style="width: 31.5%"/><img src="https://i7.glitter-graphics.org/pub/1183/1183567lz9y15lmej.gif" style="width: 31.5%"/><a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif" style="width: 110%"/></a>
 
       <table style="width: 100%">
         <tbody>
@@ -47,22 +47,13 @@
               <dt>⋆ I'm latvian</dt>
             </td>
             <td>
-              <b>MY FAVOURITE FOOD IS PIZZA</b>
+              <b>MY FAVOURITE FOOD IS <h7>PIZZA</h7></b>
             </td>
           </tr>
           <tr>
             <td rowspan="4">
-            <b>QUOTES╰(*°▽°*)╯</b>
-              <h7
-                >"If I took a meat cleaver down the center of your skull, I'd
-                have matching halves. That's very important."</h7
-              >
-              <br />
-              <h8>"Grow up, Heather, bulimia is so '87."</h8> <br />
-              <h9>"Did you have a brain tumor for breakfast?"</h9>
-              <h10
-                >"Dear diary, my teenage angst bullshit now has a body
-                count."</h10>
+              <b> what do i put here? (⊙_⊙)
+                  </b>
             </td>
             <td rowspan="4">  
               <b>STUFF I LIKE</b>
@@ -118,7 +109,7 @@
           <tr>
             <td>
               <img
-                src="https://media1.tenor.com/m/XNdQ5gz6FJgAAAAd/heathers-musical-heather-chandler.gif"
+                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-07-23_020615994.png?v=1721689579374"
                 style="width: 90%"
               />
             </td>
@@ -127,9 +118,10 @@
 
             <td>
               <img
-                src="https://media1.tenor.com/m/OHOjV0ZYjkoAAAAd/heather-mcnamara-ms-fleming.gif"
+                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-07-23_020943448.png?v=1721689785408"
                 style="width: 90%"
               />
+              <b>My nephew drew me</b>
             </td>
           </tr>
       
