👱⭐️ Checkpoint ./index.html:65991231/87

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="content">
        <img
         src="https://blinkies.cafe/b/display/0222-construction.gif"
-        style="width: 100%"
+        style="width: 99%"
         class="center"
       />
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
@@ -70,7 +70,7 @@
               <dt>RoshenCrabs</dt>
             </td>
             
-            <td rowspan="4">  
+            <td rowspan="5">  
               <b>STUFF I LIKE</b>
               <br> <br>
               <h7>🎮Videogames!</h7>
@@ -127,6 +127,9 @@
               <b>My dog Freddy</b>
             </td>
           </tr>
+      <td rowspan="3"> 
+        <b>MIAOU :3</b>
+      </td>
           <tr>
             <td>
               <img
