🍈🏢 Checkpoint ./index.html:65991231/64

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <a href="https://roopert23.glitch.me/">ㅤAubreyㅤ</a>
               <a href="https://en.pronouns.page/@Michael_Or_Mike">ㅤMichealㅤ</a>
               <a href="https://artfight.net/~WretchedRaymond45">ㅤRaymondㅤ</a>
+              <a href="https://raincat73.straw.page/">ㅤJoeㅤ</a>
             </td>
             <td>
               <b>INFO ABOUT ME!</b>
