🛋👳 Checkpoint ./index.html:65991231/153

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
       <h6>This is a page about me !!</h6>
       <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%92%9BHeather%20MacNamara%F0%9F%92%9B-trot-padded-4x.gif?v=1721757133588" style="width:15%">
-<img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%90%A6Grian%F0%9F%90%A6-trot-padded-4x.gif?v=1721757138937" style="width:15%">
+<img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%90%A6Grian%F0%9F%90%A6-trot-padded-4x.gif?v=1721757138937" style="width:15%" align="right" >
       <table style="width: 100%">
         <tbody>
           <tr>
