⛺️📻 Checkpoint ./MainPage.html:65991231/6 ./OGmain-page.html:65991231/74 ./Heathers.html:65991231/11247 ./slime-tuts.html:65991231/9283

--- a/Heathers.html
+++ b/Heathers.html
@@ -4,40 +4,66 @@
     <link rel="stylesheet" href="HeathersStyle.css" />
   </head>
   <body>
-
-
     <div class="content">
-      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/c54072f3-dca5-4b00-9ddb-b8baf71f8072.image.png?v=1721069479912" style="width: 100%">
+      <img
+        src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/c54072f3-dca5-4b00-9ddb-b8baf71f8072.image.png?v=1721069479912"
+        style="width: 100%"
+      />
       <h1>🤫YOU FOUND A SECRET🤫</h1>
       <h6>This page is all about heathers ^_^</h6>
       <h6><a href="index.html">Go back?</a></h6>
-              <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/MAC?v=1721064930217" style="width: 31.5%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/CHAN?v=1721064931984" style="width: 31.5%"/><img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/DUKE?v=1721064935310" style="width: 31.5%"/>
+      <img
+        src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/MAC?v=1721064930217"
+        style="width: 31.5%"
+      /><img
+        src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/CHAN?v=1721064931984"
+        style="width: 31.5%"
+      /><img
+        src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/DUKE?v=1721064935310"
+        style="width: 31.5%"
+      />
 
       <table style="width: 100%">
         <tbody>
           <tr>
-            <th style="width: 20%">
-
-            </th>
-            <th>      
-            </th>
-            <th style="width: 20%">
-
-            </th>
-            <tr><td colspan="3"></td>
-          <audio controls autoplay>
-                <div> 
-  <button onclick="document.getElementById('player').play()">Play</button> 
-  <button onclick="document.getElementById('player').pause()">Pause</button> 
-  <button onclick="document.getElementById('player').volume += 0.1">Vol +</button> 
-  <button onclick="document.getElementById('player').volume -= 0.1">Vol -</button> 
-</div>
-  <source src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/6%20Dead%20Girl%20Walking.mp3?v=1721111061361" type="audio/ogg">
-  <source src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/6%20Dead%20Girl%20Walking.mp3?v=1721111061361" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
+            <th style="width: 20%"></th>
+            <th></th>
+            <th style="width: 20%"></th>
           </tr>
+
+          <tr>
+            <td colspan="3"></td>
+            <audio controls autoplay>
+              <div>
+                <button onclick="document.getElementById('player').play()">
+                  Play
+                </button>
+                <button onclick="document.getElementById('player').pause()">
+                  Pause
+                </button>
+                <button
+                  onclick="document.getElementById('player').volume += 0.1"
+                >
+                  Vol +
+                </button>
+                <button
+                  onclick="document.getElementById('player').volume -= 0.1"
+                >
+                  Vol -
+                </button>
+              </div>
+              <source
+                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/6%20Dead%20Girl%20Walking.mp3?v=1721111061361"
+                type="audio/ogg"
+              />
+              <source
+                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/6%20Dead%20Girl%20Walking.mp3?v=1721111061361"
+                type="audio/mpeg"
+              />
+              Your browser does not support the audio element.
+            </audio>
           </tr>
+
           <tr>
             <td rowspan="2">
               <b>A ranking of my favourite characters :-)</b> <br />
@@ -92,14 +118,13 @@ Your browser does not support the audio element.
                 count."</h10
               >
             </td>
-          
+
             <td>
               <img
                 src="https://media1.tenor.com/m/tLkJFgjbqZgAAAAd/veronica-heathers-the-musical.gif"
                 style="width: 90%"
               />
             </td>
-            
           </tr>
           <tr>
             <td>
@@ -110,7 +135,15 @@ Your browser does not support the audio element.
             </td>
           </tr>
           <tr>
-            <td><img src="https://media1.tenor.com/m/I3qhy9zPMgwAAAAC/heathers-heatherchandler.gif" style="width:90%"></td>
+            <td>
+              <img
+                src="https://media1.tenor.com/m/I3qhy9zPMgwAAAAC/heathers-heatherchandler.gif"
+                style="width: 90%"
+              />
+              <h6>
+                <a href="slime-tuts.html">slime tutorials ദ്ദി(˵ •̀ ᴗ - ˵ )</a>
+              </h6>
+            </td>
             <td>
               <img
                 src="https://media1.tenor.com/m/OHOjV0ZYjkoAAAAd/heather-mcnamara-ms-fleming.gif"
