✂️🚇 Checkpoint ./slime-tuts.html:65991231/1026

--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -34,18 +34,23 @@
           <tr>
             <td> <dt>Joe's pub</dt>
             <h6>2010</h6></td>
-            <td>a</td>
-            <td>a</td>
-            <td>a</td>
-            <td>f</td>
+            <td><dt>LA run</dt>
+            <h6> 2013</h6></td>
+            <td><dt>Off-Broadway</dt>
+            <h6>2014</h6></td>
+            <td><dt>West end</dt>
+            <h6>2018</h6></td>
+            <td><dt>West end revival</dt>
+            <h6>2021</h6></td>
           </tr>
 
           <tr>
+            <td><a href="https://www.youtube.com/watch?v=clTV6PBY6y0">YouTube</a></td>
+            <td><a href="https://www.youtube.com/watch?v=WuCjLi0wlr0">YouTube (audio only)</a></td>
+            <td><a href="https://youtu.be/vn8uvsc5rbM?si=kg-XxIGSuVtmWk-y">YouTube</a></td>
+            <td><a href="https://www.youtube.com/watch?v=M6EFY_vD1xA&list=WL&index=17&t=3904s">YouTube</a></td>
+            <td></td>
             <td><a href="slime-tuts.html">slime tutorials ദ്ദി(˵ •̀ ᴗ - ˵ )</a></td>
-            <td><a href="slime-tuts.html">slime tutorials ദ്ദി(˵ •̀ ᴗ - ˵ )</a></td>
-            <td><a href="slime-tuts.html">slime tutorials ദ്ദി(˵ •̀ ᴗ - ˵ )</a></td>
-            <td><a href="slime-tuts.html">slime tutorials ദ്ദി(˵ •̀ ᴗ - ˵ )</a></td>
-            <td>f</td>
           </tr>
           <tr>
             <td>e</td>
