🌾👨‍❤️‍👨 Checkpoint ./slime-tuts.html:65991231/1222 ./slime-tut-STYLE.css:65991231/1322

--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="HeathersStyle.css" />
+    <link rel="stylesheet" href="slime-tut-STYLE.css" />
   </head>
   <body>
     <div class="content">
@@ -38,10 +38,18 @@
             <h6> 2013</h6></td>
             <td><dt>Off-Broadway</dt>
             <h6>2014</h6></td>
-            <td><dt>West end</dt>
+            <td><dt>West End</dt>
             <h6>2018</h6></td>
-            <td><dt>West end revival</dt>
+            <td><dt>West End Revival</dt>
             <h6>2021</h6></td>
+            <td><dt>UK Tour</dt>
+            <h6>2021</h6></td>
+            <td><dt>2022 Proshot</dt>
+            <h6>2022</h6></td>
+            <td><dt>UK & Ireland Tour</dt>
+            <h6>2023</h6></td>
+            <td><dt>West End Revival</dt>
+            <h6>2024</h6></td>
           </tr>
 
           <tr>
@@ -49,8 +57,11 @@
             <td><a href="https://www.youtube.com/watch?v=WuCjLi0wlr0">YouTube (audio only)</a></td>
             <td><a href="https://youtu.be/vn8uvsc5rbM?si=kg-XxIGSuVtmWk-y">YouTube</a></td>
             <td><a href="https://www.youtube.com/watch?v=M6EFY_vD1xA&list=WL&index=17&t=3904s">YouTube</a></td>
-            <td></td>
-            <td><a href="slime-tuts.html">slime tutorials ദ്ദി(˵ •̀ ᴗ - ˵ )</a></td>
+            <td><b>dont have 😞</b></td>
+            <td><a href="https://www.youtube.com/playlist?list=PLFSAG1zYQbrV4mKXr36STbtK6KRE0-dU4">YouTube playlist</a></td>
+            <td><b>dont have 😞</b></td>
+            <td><b>dont have 😞</b></td>
+            <td><a href="link">miaou</a></td>
           </tr>
           <tr>
             <td>e</td>
