💓🍴 Checkpoint ./slime-tuts.html:65991231/778 ./slime-tut-STYLE.css:65991231/4

--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -53,22 +53,30 @@
           </tr>
 
           <tr>
-            <td><a href="https://www.youtube.com/watch?v=clTV6PBY6y0">YouTube</a></td>
-            <td><a href="https://www.youtube.com/watch?v=WuCjLi0wlr0">YouTube (audio only)</a></td>
-            <td><a href="https://youtu.be/vn8uvsc5rbM?si=kg-XxIGSuVtmWk-y">YouTube</a></td>
-            <td><a href="https://www.youtube.com/watch?v=M6EFY_vD1xA&list=WL&index=17&t=3904s">YouTube</a></td>
+            <td><a href="https://www.youtube.com/watch?v=clTV6PBY6y0">Full recording</a></td>
+            <td><a href="https://www.youtube.com/watch?v=WuCjLi0wlr0">Audio only</a></td>
+            <td><a href="https://youtu.be/vn8uvsc5rbM?si=kg-XxIGSuVtmWk-y">Full recording</a></td>
+            <td><a href="https://www.youtube.com/watch?v=M6EFY_vD1xA&list=WL&index=17&t=3904s">Full recording</a></td>
             <td><b>dont have 😞</b></td>
-            <td><a href="https://www.youtube.com/playlist?list=PLFSAG1zYQbrV4mKXr36STbtK6KRE0-dU4">YouTube playlist</a></td>
+            <td><a href="https://www.youtube.com/playlist?list=PLFSAG1zYQbrV4mKXr36STbtK6KRE0-dU4">Full recording (playlist)</a></td>
             <td><b>dont have 😞</b></td>
             <td><b>dont have 😞</b></td>
-            <td><a href="link">miaou</a></td>
+            <td><b>dont have 😞</b></td>
           </tr>
           <tr>
             <td>e</td>
-            <td>f</td>
-            <td>f</td>
             <td>e</td>
-            <td>f</td>
+            <td><a href="https://youtu.be/G3JrB_yvaNc?si=yMsXksa0taLLZaqR">Barret's final recording (audio)</a> 
+            <a href="https://youtu.be/NpfTz3xVNzg?si=FTTy-EyZixJWh2tz">Ryan's final recording (audio)</a></td>
+            <td>e</td>
+            <td>e</td>
+            <td>e</td>
+            <td>e</td>
+            <td>e</td>
+            <td>e</td>
+          </tr>
+          <tr>
+          <td colspan="3"></td>
           </tr>
 
         </tbody>
