🌠💏 Checkpoint ./slime-tuts.html:65991231/1183

--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -63,20 +63,14 @@
             <td><b>dont have 😞</b></td>
             <td><b>dont have 😞</b></td>
           </tr>
+
           <tr>
-            <td>e</td>
-            <td>e</td>
-            <td><a href="https://youtu.be/G3JrB_yvaNc?si=yMsXksa0taLLZaqR">Barret's final recording (audio)</a> 
-            <a href="https://youtu.be/NpfTz3xVNzg?si=FTTy-EyZixJWh2tz">Ryan's final recording (audio)</a></td>
-            <td>e</td>
-            <td>e</td>
-            <td>e</td>
-            <td>e</td>
-            <td>e</td>
-            <td>e</td>
-          </tr>
-          <tr>
-          <td colspan="3"></td>
+          <td colspan="9"><dt>Other interesting recordings ( ˶°ㅁ°)!!</dt>
+             <a href="https://youtu.be/NpfTz3xVNzg?si=FTTy-EyZixJWh2tz">Ryan McCartan's final recording (audio)</a> <br><br>
+            <a href="https://youtu.be/G3JrB_yvaNc?si=yMsXksa0taLLZaqR">Barrett Wilbert Weed's final recording (audio)</a> <br> <br>
+            <a href="https://youtu.be/NviXAAUfubQ?si=YyUD0h1tkHCXeDKB">Ryan McCartan and Jessica Wynn Off-Broadway</a>
+            
+            </td>
           </tr>
 
         </tbody>
