--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -32,47 +32,105 @@
           </tr>
 
           <tr>
-            <td> <dt>Joe's pub</dt>
-            <h6>2010</h6></td>
-            <td><dt>LA run</dt>
-            <h6> 2013</h6></td>
-            <td><dt>Off-Broadway</dt>
-            <h6>2014</h6></td>
-            <td><dt>West End</dt>
-            <h6>2018</h6></td>
-            <td><dt>West End Revival</dt>
-            <h6>2021</h6></td>
-            <td><dt>UK Tour</dt>
-            <h6>2021</h6></td>
-            <td><dt>2022 Proshot</dt>
-            <h6>2022</h6></td>
-            <td><dt>UK & Ireland Tour</dt>
-            <h6>2023</h6></td>
-            <td><dt>West End Revival</dt>
-            <h6>2024</h6></td>
-          </tr>
-
-          <tr>
-            <td><a href="https://www.youtube.com/watch?v=clTV6PBY6y0">Full recording</a></td>
-            <td><a href="https://www.youtube.com/watch?v=WuCjLi0wlr0">Audio only</a></td>
-            <td><a href="https://youtu.be/vn8uvsc5rbM?si=kg-XxIGSuVtmWk-y">Full recording</a></td>
-            <td><a href="https://www.youtube.com/watch?v=M6EFY_vD1xA&list=WL&index=17&t=3904s">Full recording</a></td>
-            <td><b>dont have 😞</b></td>
-            <td><a href="https://www.youtube.com/playlist?list=PLFSAG1zYQbrV4mKXr36STbtK6KRE0-dU4">Full recording (playlist)</a></td>
-            <td><b>dont have 😞</b></td>
-            <td><b>dont have 😞</b></td>
-            <td><b>dont have 😞</b></td>
-          </tr>
-
-          <tr>
-          <td colspan="9"><dt>Other interesting recordings ( ˶°ㅁ°)!!</dt>
-             <a href="https://youtu.be/NpfTz3xVNzg?si=FTTy-EyZixJWh2tz">Ryan McCartan's final recording (audio)</a> <br><br>
-            <a href="https://youtu.be/G3JrB_yvaNc?si=yMsXksa0taLLZaqR">Barrett Wilbert Weed's final recording (audio)</a> <br> <br>
-            <a href="https://youtu.be/NviXAAUfubQ?si=YyUD0h1tkHCXeDKB">Ryan McCartan and Jessica Wynn Off-Broadway</a>
-            
+            <td>
+              <dt>Joe's pub</dt>
+              <h6>2010</h6>
+            </td>
+            <td>
+              <dt>LA run</dt>
+              <h6>2013</h6>
+            </td>
+            <td>
+              <dt>Off-Broadway</dt>
+              <h6>2014</h6>
+            </td>
+            <td>
+              <dt>West End</dt>
+              <h6>2018</h6>
+            </td>
+            <td>
+              <dt>West End Revival</dt>
+              <h6>2021</h6>
+            </td>
+            <td>
+              <dt>UK Tour</dt>
+              <h6>2021</h6>
+            </td>
+            <td>
+              <dt>2022 Proshot</dt>
+              <h6>2022</h6>
+            </td>
+            <td>
+              <dt>UK & Ireland Tour</dt>
+              <h6>2023</h6>
+            </td>
+            <td>
+              <dt>West End Revival</dt>
+              <h6>2024</h6>
             </td>
           </tr>
 
+          <tr>
+            <td>
+              <a href="https://www.youtube.com/watch?v=clTV6PBY6y0"
+                >Full recording</a
+              >
+            </td>
+            <td>
+              <a href="https://www.youtube.com/watch?v=WuCjLi0wlr0"
+                >Audio only</a
+              >
+            </td>
+            <td>
+              <a href="https://youtu.be/vn8uvsc5rbM?si=kg-XxIGSuVtmWk-y"
+                >Full recording</a
+              >
+            </td>
+            <td>
+              <a
+                href="https://www.youtube.com/watch?v=M6EFY_vD1xA&list=WL&index=17&t=3904s"
+                >Full recording</a
+              >
+            </td>
+            <td>
+              <a
+                href="https://www.youtube.com/playlist?list=PL65fQfBs8YzNVD05SnXZ6v9Gtp3-DkP1i"
+                >Full recording (playlist)</a
+              >
+            </td>
+            <td>
+              <a
+                href="https://www.youtube.com/playlist?list=PLFSAG1zYQbrV4mKXr36STbtK6KRE0-dU4"
+                >Full recording (playlist)</a
+              >
+            </td>
+            <td>
+              <a
+                href="https://drive.google.com/file/d/1VPv7UyACABl9oa7rQX7aN_sFQV54Xzlg/view"
+                >Full recording</a
+              >
+            </td>
+            <td><b>dont have 😞</b></td>
+            <td><b>dont have 😞</b></td>
+          </tr>
+          =
+          <tr>
+            <td colspan="9">
+              <dt>Other interesting recordings ( ˶°ㅁ°)!!</dt>
+              <a href="https://youtu.be/NpfTz3xVNzg?si=FTTy-EyZixJWh2tz"
+                >Ryan McCartan's final recording (audio)</a
+              >
+              <br /><br />
+              <a href="https://youtu.be/G3JrB_yvaNc?si=yMsXksa0taLLZaqR"
+                >Barrett Wilbert Weed's final recording (audio)</a
+              >
+              <br />
+              <br />
+              <a href="https://youtu.be/NviXAAUfubQ?si=YyUD0h1tkHCXeDKB"
+                >Ryan McCartan and Jessica Wynn Off-Broadway (act 1)</a
+              >
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
