🐦🛩 Checkpoint ./index.html:65991231/72

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <b>Pals ╰(*°▽°*)╯</b> <br />
               <a href="https://roopert23.glitch.me/">ㅤRupertㅤ</a>
               <a href="https://roopert23.glitch.me/">ㅤAubreyㅤ</a>
-              <a href="https://en.pronouns.page/@Michael_Or_Mike">ㅤMichealㅤ</a>
+              <a href="https://bigspaceguy.straw.page/">ㅤMichealㅤ</a>
               <a href="https://artfight.net/~WretchedRaymond45">ㅤRaymondㅤ</a>
               <a href="https://raincat73.straw.page/">ㅤJoeㅤ</a>
             </td>
