🐔🏡 Checkpoint ./index.html:65991231/639 ./.glitch-assets:65991231/1052

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       />
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
       <h6>This is a page about me !!</h6>
-      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%92%9BHeather%20MacNamara%F0%9F%92%9B-trot-padded-4x.gif?v=1721757133588" style="width:15%">
-<img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%90%A6Grian%F0%9F%90%A6-trot-padded-4x.gif?v=1721757138937" style="width:15%" align="right" >
+      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%92%9BMac%F0%9F%92%9B-trot-padded-4x.gif?v=1724267161860" style="width:15%">
+<img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%90%A6Grian%F0%9F%90%A6-trot-padded-4x.gif?v=1724267169058" style="width:15%" align="right" >
       <table style="width: 100%">
         <tbody>
           <tr>
@@ -35,7 +35,6 @@
             <td rowspan="1">
               <b>Pals ╰(*°▽°*)╯</b> <br />
               <a href="https://roopert23.glitch.me/">ㅤRupertㅤ</a>
-              <a href="https://roopert23.glitch.me/">ㅤAubreyㅤ</a>
               <a href="https://bigspaceguy.straw.page/">ㅤMichealㅤ</a>
               <a href="https://artfight.net/~WretchedRaymond45">ㅤRaymondㅤ</a>
               <a href="https://raincat73.straw.page/">ㅤJoeㅤ</a>
@@ -64,7 +63,7 @@
                 <a href="https://www.reddit.com/user/StoicWanders/">Reddit</a>
               <a href="https://www.pixilart.com/dibger">Pixilart</a>
               <h7>[DISCORD]</h7>
-              <dt>dibgo</dt> <br>
+              <dt>dingosucks</dt> <br>
               <h7>[Mc JAVA]</h7>
               <dt>dibgo</dt> <br>
               <h7>[Mc BE]</h7>
