🏎🗃 Checkpoint ./slime-tuts.html:65991231/148

--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -129,6 +129,9 @@
               <a href="https://youtu.be/NviXAAUfubQ?si=YyUD0h1tkHCXeDKB"
                 >Ryan McCartan and Jessica Wynn Off-Broadway (act 1)</a
               >
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=vEhRPKJ8XfI">Heathers The Other Palace 2022 (Full)</a>
             </td>
           </tr>
         </tbody>
