🎥🕌 Checkpoint ./OGmain-page.html:65991231/800

--- a/OGmain-page.html
+++ b/OGmain-page.html
@@ -91,10 +91,7 @@
               <h5>🎥Content creators!</h5>
               <dt><a href="https://www.youtube.com/@Grian">⋆ Grianㅤ</a></dt>
               <dt>
-                <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWSㅤ</a>
-              </dt>
-              <dt>
-                <a href="https://www.youtube.com/@Slimecicle">⋆ Slimecicleㅤ</a>
+                <a href="https://www.youtube.com/@NickCrowley">⋆ Nick Crowleyㅤ</a>
               </dt>
               <dt>
                 <a href="https://www.youtube.com/@Technoblade">⋆ Technobladeㅤ</a>
@@ -112,7 +109,7 @@
               <dt>⋆ doing yr mom</dt>
               <h5>😼Other stuffs!</h5>
               <dt>⋆ Heathers</dt>
-              <dt>⋆ Ride the Cyclone</dt>
+              <dt>⋆ Falsettos</dt>
               <dt>⋆ Hermitcraft</dt>
               <dt>⋆ The front bottoms</dt>
               <dt>⋆ Garfield</dt>
@@ -139,6 +136,7 @@
               <dd>RoshenCrabs</dd>
             </td>
           </tr>
+          <td></td>
           <tr>
             <td>
               <img
